--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,10 +7,9 @@
       {{ page.title }} | {{ site.data.settings.title }}
     {% endif %}
   </title>
+ 
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  
   <link rel="stylesheet" href="{{ site.github.url }}/assets/css/main.css">
   <link rel="stylesheet" href="{{ site.github.url }}/assets/css/syntax.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Source+Code+Pro">
